# Django-reg-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
user_management/: settings.py
users/templates/users/: base.html  home.html  login.html  logout.html  profile.html
